    + Allow an SMTP host to be specified as using SMTPS and/or a
      non-standard port number
  * checkbashisms:
    + Add a check for $UID being set to -x
    + Apply a small fix to part of the "quoted block detection"
    + Quote test expressions using qr to allow perl to optionally compile
      or otherwise optimise them. Thanks to Frank Lichtenheld for the idea.
  * debchange, nmudiff: Replace calls to date -R with strftime(). Thanks
    Stephen Gran (Closes: #486594)
  * licensecheck:
    + Add .cxx and .hxx to the default list of file extensions to check
      (Closes: #487384)
    + Add _MTN (monotone) to the default exclusion expression
  * uscan:
    + Add an example of a newer form of watch file syntax for SourceForge
      based projects to the manpage
    + If the site being checked redirects to another with a directory
      structure that does not match the original site, check for download URLs
      that refer to the redirected site rather than the original. Based on a
      patch by Raphael Geissert (Closes: #487436)
  * debian/control
    + Suggest libnet-smtp-ssl-perl (>= 1.01-2) in order to allow bts to
      suport SMTPS. The versioned dependency is required in order to ensure
      that a fixed libio-socket-ssl-perl is used.
    + Add libnet-smtp-ssl-perl to the description of bts
  * README: Add libnet-smtp-ssl-perl to the description of bts

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 16 Jun 2008 20:52:22 +0100

devscripts (2.10.30) unstable; urgency=low

  * bts: MIME-encode the Subject: header of the generated mail in case it
    contains any non-ASCII characters (Closes: #486395)
  * checkbashisms:
    + Apply a couple of small fixes to the "quoted block detection" and the
      removal of quoted strings
    + Temporarily disable the $"" and $'' checks as they're very prone to
      false positives
    + Fix typoes in the heredoc and popd checks (Closes: #486159)