@@ -9,6 +9,9 @@ devscripts (2.10.31) UNRELEASED; urgency=low
     + Apply a small fix to part of the "quoted block detection"
     + Quote test expressions using qr to allow perl to optionally compile
       or otherwise optimise them. Thanks to Frank Lichtenheld for the idea.
+  * Debbugs.pm: Move initialisation of the SOAP object in to a common routine
+    and set the underlying transport object to honour proxies from the
+    environment (Closes: #487592)
   * debchange, nmudiff: Replace calls to date -R with strftime(). Thanks
     Stephen Gran (Closes: #486594)
   * licensecheck:
